# validate-secrets

./: .env.example  .gitignore  CODEOWNERS  CONTRIBUTING.md  LICENSE.md  README.md  SECURITY.md  azure-pipelines.yml  check_teams_webhooks.py  pyproject.toml  webhooks.txt
.github/: dependabot.yml  secret_scanning.yml
.github/workflows/: ci.yml  codeql.yml
src/validate_secrets/: __init__.py  __main__.py  cli.py  config.py  utils.py
src/validate_secrets/core/: __init__.py  base.py  exceptions.py  registry.py
src/validate_secrets/sources/: __init__.py  base.py  file.py  github.py
src/validate_secrets/validators/: __init__.py  databricks_token.py  fodselsnummer.py  google_api_keys.py  microsoft_teams_webhook.py  snyk_api_token.py
tests/: __init__.py  test_github.py  test_registry.py  test_sources.py  test_validators.py
tests/samples/: test_google_keys.txt  test_secrets.csv  test_secrets.json  test_secrets.txt
validate_secrets/: __init__.py  __main__.py  types.py  validate_secrets.py
validate_secrets/fodselsnummer/: __init__.py  fodselsnummer.py
validate_secrets/google_api_keys/: __init__.py  google_api_keys.py
validate_secrets/office_webhooks/: __init__.py  office_webhooks.py
validate_secrets/snyk_api_tokens/: __init__.py  snyk_api_tokens.py
