[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "validate_secrets"
version = "0.1.0"
description = "Check secrets for validity"
readme = "README.md"
dependencies = [
    "requests==2.32.2",
    "defusedcsv==2.0.0",
    "urllib3==2.2.2",
]

[project.urls]
Home = "https://github.com/aegilops/validate_secrets"

[project.scripts]
validate-secrets = "validate_secrets:main"
