[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "validate-secrets"
version = "1.0.0"
description = "Extensible secret validation tool for GitHub Secret Scanning and beyond"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Stefan @theztefan Petrushevski", email = "theztefan@github.com"},
    {name = "Paul @aegilops Hodgkinson", email = "aegilops@github.com"}, 
]
requires-python = ">=3.11"
dependencies = [
    "defusedcsv>=3.0.0",
    "requests>=2.34.2",
    "python-dotenv>=1.2.2",
    "click>=8.4.1",
    "rich>=15.0.0",
    "urllib3>=2.7.0",
]

[project.urls]
Home = "https://github.com/advanced-security/validate_secrets"

[project.scripts]
validate-secrets = "validate_secrets.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/validate_secrets"]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "black>=26.5.1",
]
